XMLExper/m12/m12_58_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:756:70: error: lvalue required as left operand of assignment
  756 |         /*PCI*/dynamic_cast<tinyxml2::XMLDeclaration*>(returnNode) = text;
      |                                                                      ^~~~
diff: tinyxml2.S: No such file or directory
